--- a/com.github.mirkobrombin.docui.yml
+++ b/com.github.mirkobrombin.docui.yml
@@ -19,14 +19,8 @@ modules:
     builddir: true
     buildsystem: simple
     build-options:
-      env:
-        GOBIN: /app/bin
-    build-commands:
-      - |
-        . /usr/lib/sdk/golang/enable.sh
-        export GOPATH=$PWD/go
-        export GO111MODULE=on
-      - go install
+      append-path: /usr/lib/sdk/golang/bin
+    build-commands: go install
     sources:
       - type: archive
         url: 'https://github.com/skanehira/docui/releases/download/2.0.4/docui_2.0.4_Linux_x86_64.tar.gz'
